Deployments/YAMLs/DEV/Ingress/nextstep-ingress1.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nextstep-dev-ingress
  namespace: nextstep-dev-dev
  annotations:    
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: nginx-service
          servicePort: 80
        path: /health/?(.*)
      - backend:
          serviceName: nginx-service
          servicePort: 80
        path: /nginx/?(.*)
      - backend:
          serviceName: nextstep-waxui
          servicePort: 8080
        path: /waxui/?(.*)
      - backend:
          serviceName: nextstep-msaccelarator
          servicePort: 8080
        path: /?(.*)
      - backend:
          serviceName: nextstep-mdcertui
          servicePort: 80
        path: /datacertui/?(.*)
      # - backend:
      #     serviceName: nextstep-mdcertsvc
      #     servicePort: 3002
      #   path: /datacertsrv/?(.*)
